crates/sgf-core/tests/snapshots/ops_nebula/move_system_108_out_of_nebula.snap
---
source: crates/sgf-core/tests/common/mod.rs
assertion_line: 212
expression: value
---
Moved Ascensions End (#108) from (83.2, -118.95) to (200, -50); updated 12 lane lengths; left Phantom Streak Miasma
touched: [108, 164, 181, 438, 455, 484, 753]
inverse: Batch { description: "Undo of \"Moved Ascensions End (#108) from (83.2, -118.95) to (200, -50); updated 12 lane lengths; left Phantom Streak Miasma\"", ops: [MoveSystem { system: 108, x: 83.2, y: -118.95 }, SetNebulaFootprints { footprints: [NebulaFootprint { system: 108, cloud: Some(NebulaCloud { id: 1055, kind: "nebula_4" }), cloaking: true, turbulent: false }] }] }
… and 3 other issues

--- nebula
+++ nebula
@@ -6053,7 +6053,6 @@
 		key="Phantom_Streak_Miasma"
 	}
 	radius=30
-	galactic_object=108
 	galactic_object=140
 	galactic_object=164
 	galactic_object=181
