crates/sgf-core/tests/snapshots/ops_nebula/move_systems_108_out_and_455_into_nebula.snap
---
source: crates/sgf-core/tests/common/mod.rs
assertion_line: 212
expression: value
---
Moved 2 systems; updated 16 lane lengths; Ascensions End left Phantom Streak Miasma; Mihil joined Phantom Streak Miasma
touched: [108, 164, 181, 438, 455, 484, 753]
inverse: Batch { description: "Undo of \"Moved 2 systems; updated 16 lane lengths; Ascensions End left Phantom Streak Miasma; Mihil joined Phantom Streak Miasma\"", ops: [MoveSystems { moves: [SystemMove { system: 455, x: 100.07, y: -134.13 }, SystemMove { system: 108, x: 83.2, y: -118.95 }] }, SetNebulaFootprints { footprints: [NebulaFootprint { system: 108, cloud: Some(NebulaCloud { id: 1055, kind: "nebula_4" }), cloaking: true, turbulent: false }] }] }
… and 3 other issues

--- nebula
+++ nebula
@@ -6053,12 +6053,12 @@
 		key="Phantom_Streak_Miasma"
 	}
 	radius=30
-	galactic_object=108
 	galactic_object=140
 	galactic_object=164
 	galactic_object=181
 	galactic_object=348
 	galactic_object=438
+	galactic_object=455
 	galactic_object=463
 	galactic_object=623
 }
