crates/sgf-core/tests/snapshots/ops_nebula/set_nebula_name.snap
---
source: crates/sgf-core/tests/common/mod.rs
assertion_line: 212
expression: value
---
Renamed nebula 0 from "Phantom_Streak_Miasma" to "Sea of Ghosts"
touched: []
inverse: RenameNebula { index: 0, name: "Phantom_Streak_Miasma" }
… and 3 other issues

--- nebula
+++ nebula
@@ -6050,7 +6050,8 @@
 	}
 	name=
 	{
-		key="Phantom_Streak_Miasma"
+		key="Sea of Ghosts"
+		literal=yes
 	}
 	radius=30
 	galactic_object=108
