crates/sgf-core/tests/snapshots/ops_nebula/set_nebula_name_key.snap
---
source: crates/sgf-core/tests/common/mod.rs
assertion_line: 212
expression: value
---
Renamed nebula 0 from "Sea of Ghosts" to "NAME_N_Maw"
touched: []
inverse: RenameNebula { index: 0, name: "Sea of Ghosts" }
… and 3 other issues

--- nebula
+++ nebula
@@ -6050,7 +6050,7 @@
 	}
 	name=
 	{
-		key="Phantom_Streak_Miasma"
+		key="NAME_N_Maw"
 	}
 	radius=30
 	galactic_object=108
