crates/sgf-core/tests/snapshots/ops_nebula/set_nebula_radius_15.snap
---
source: crates/sgf-core/tests/common/mod.rs
assertion_line: 212
expression: value
---
Set Phantom Streak Miasma radius to 15 (was 30); 6 systems left
touched: [108, 140, 164, 181, 348, 463]
inverse: Batch { description: "Undo of \"Set Phantom Streak Miasma radius to 15 (was 30); 6 systems left\"", ops: [SetNebulaRadius { index: 0, radius: 30.0 }, SetNebulaFootprints { footprints: [NebulaFootprint { system: 108, cloud: Some(NebulaCloud { id: 1055, kind: "nebula_4" }), cloaking: true, turbulent: false }, NebulaFootprint { system: 140, cloud: Some(NebulaCloud { id: 1051, kind: "nebula_1" }), cloaking: true, turbulent: false }, NebulaFootprint { system: 164, cloud: Some(NebulaCloud { id: 1049, kind: "nebula_4" }), cloaking: true, turbulent: false }, NebulaFootprint { system: 181, cloud: Some(NebulaCloud { id: 1048, kind: "turbulent_nebula_2" }), cloaking: true, turbulent: true }, NebulaFootprint { system: 348, cloud: Some(NebulaCloud { id: 1042, kind: "turbulent_nebula_2" }), cloaking: true, turbulent: true }, NebulaFootprint { system: 463, cloud: Some(NebulaCloud { id: 1035, kind: "rare_nebula_2" }), cloaking: true, turbulent: false }] }] }
… and 3 other issues

--- nebula
+++ nebula
@@ -6052,14 +6052,8 @@
 	{
 		key="Phantom_Streak_Miasma"
 	}
-	radius=30
-	galactic_object=108
-	galactic_object=140
-	galactic_object=164
-	galactic_object=181
-	galactic_object=348
+	radius=15
 	galactic_object=438
-	galactic_object=463
 	galactic_object=623
 }
 nebula=
